# Voice-Agent

./: .gitignore  DEPLOYMENT.md  RAILWAY_DNS_TROUBLESHOOTING.md  README.md  install.sh  package.json  pyproject.toml  requirements.txt  start.bat  start.sh
backend/: Procfile-agent  __init__.py  api.py  db.py  main.py  requirements.txt  schema.sql
frontend/: Procfile  next.config.js  package-lock.json  package.json  server.js  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/login/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/mentor/: page.tsx
frontend/src/app/mentor/login/: page.tsx
frontend/src/components/: CallingLoader.tsx  LiveKitRoom.tsx
frontend/src/lib/: api.ts  store.ts
